final rnn with comments

--- a/RNN.ipynb
+++ b/RNN.ipynb
@@ -48,10 +48,11 @@
         }
       },
       "source": [
+        "# Mounting google drive to access data and glove model\n",
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -78,6 +79,7 @@
         }
       },
       "source": [
+        "#import all required packages and modules.\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
@@ -114,7 +116,7 @@
         "\n",
         "import time\n"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -185,13 +187,14 @@
       },
       "source": [
         "\n",
+        "# copying dataset and embedding from drive. Unpacking the compressed files\n",
         "!cp gdrive/'My Drive'/bbc-fulltext.zip .\n",
         "!cp gdrive/'My Drive'/glove.6B.zip .\n",
         "!unzip bbc-fulltext.zip > out.txt\n",
         "!rm bbc/README.TXT\n",
         "!unzip glove.6B.zip\n"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,6 +217,8 @@
         "colab": {}
       },
       "source": [
+        "\n",
+        "# from https://stackoverflow.com/questions/32419510/how-to-get-reproducible-results-in-keras\n",
         "# Seed value\n",
         "# Apparently you may use different seed values at each stage\n",
         "seed_value= 123\n",
@@ -269,7 +274,7 @@
         "\n",
         "df.head()"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -395,7 +400,7 @@
         "plt.show()\n",
         "'''"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -434,6 +439,7 @@
         }
       },
       "source": [
+        "#Split training and test set using stratified sampling and test size of 20%\n",
         "y = df['category']\n",
         "X = df.drop(['category','id'],axis=1)\n",
         "X_train, X_test, y_train, y_test  = train_test_split(X,y,stratify=y, test_size=0.2, random_state=123)\n",
@@ -443,13 +449,14 @@
         "\n",
         "print('before: %s ...' %y_train[:5])\n",
         "\n",
+        "#Transform label names to unique number using label encoder\n",
         "le = LabelEncoder()\n",
         "le.fit(y_train)\n",
         "y_train = le.transform(y_train)\n",
         "\n",
         "print('after: %s ...' %y_train)"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -482,7 +489,7 @@
         "print(y.value_counts())\n",
         "print(le.inverse_transform([i for i in range(5)]))"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -610,7 +617,8 @@
         }
       },
       "source": [
-        "\n",
+        "#Choose max sequence length with optimal sequence length based on box plot\n",
+        "#Load glove model embeddings corresponding to best dimensions from hyperparameter tuning\n",
         "MAX_SEQUENCE_LENGTH = 1000\n",
         "MAX_NB_WORDS = 20000\n",
         "VALIDATION_SPLIT = 0.2\n",
@@ -623,7 +631,7 @@
         "\n",
         "print('Found %s word vectors.' % len(embeddings_index))"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -646,6 +654,7 @@
         }
       },
       "source": [
+        "#Create data with tokenizer word_index. Neglect words which are not in word_index\n",
         "tokenizer = Tokenizer(nb_words=MAX_NB_WORDS)\n",
         "tokenizer.fit_on_texts(texts)\n",
         "sequences = tokenizer.texts_to_sequences(texts)\n",
@@ -659,7 +668,7 @@
         "print('Shape of data tensor:', data.shape)\n",
         "print('Shape of label tensor:', labels.shape)\n",
         "\n",
-        "# split the data into a training set and a validation set\n",
+        "#Split training and validation data with 20% split. So final is training 64%, validation 16% and test 20% of whole data\n",
         "indices = np.arange(data.shape[0])\n",
         "np.random.shuffle(indices)\n",
         "data = data[indices]\n",
@@ -671,7 +680,7 @@
         "xval = data[-nb_validation_samples:]\n",
         "yval = labels[-nb_validation_samples:]"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -748,7 +757,7 @@
         "  labels_index[name] = i\n",
         "labels_index"
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -792,6 +801,7 @@
         "colab": {}
       },
       "source": [
+        "#Model Architecture\n",
         "sequence_input = Input(shape=(MAX_SEQUENCE_LENGTH,), dtype='int32')\n",
         "embedded_sequences = embedding_layer(sequence_input)\n",
         "if bidirectional:\n",
@@ -821,7 +831,7 @@
       "source": [
         "lstm_model.summary()"
       ],
-      "execution_count": 46,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -854,6 +864,7 @@
         "colab": {}
       },
       "source": [
+        "#Callbacks - checkpointer, early stopping and tensorboard\n",
         "model_name = \"RNN-\"+str(dropout)+\"-\"+str(EMBEDDING_DIM)+\"-Trainable-\"+str(traina)+\"-bidrect-\"+str(bidirectional)\n",
         "checkpointer = ModelCheckpoint(model_name + \"_weights.{epoch:02d}-{val_loss:.2f}.hdf5\", monitor=\"val_loss\", verbose=1,\n",
         "                               save_best_only=True, mode='min')\n",
@@ -875,13 +886,14 @@
         }
       },
       "source": [
+        "#Train Model\n",
         "stmillis = int(round(time.time() * 1000))\n",
         "history = lstm_model.fit(xtrain, ytrain, validation_data=(xval, yval),\n",
         "          epochs=50, batch_size=128, callbacks=[checkpointer, early_stopping,tensorboard_rnn])\n",
         "endmillis = int(round(time.time() * 1000))\n",
         "print(\"Time taken: \", endmillis - stmillis)"
       ],
-      "execution_count": 48,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1059,13 +1071,14 @@
       "metadata": {
         "id": "vl8sxWfCEvhn",
         "colab_type": "code",
+        "outputId": "17e007a2-67a9-4c40-8f22-34fbd7c9cf93",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 302
-        },
-        "outputId": "17e007a2-67a9-4c40-8f22-34fbd7c9cf93"
+        }
       },
       "source": [
+        "#Plot loss curve\n",
         "fig=plt.figure()\n",
         "plt.plot(history.history['loss'],'r',linewidth=3.0)\n",
         "plt.plot(history.history['val_loss'],'b',linewidth=3.0)\n",
@@ -1076,7 +1089,7 @@
         "fig.savefig(model_name+'.png')\n",
         "plt.show()"
       ],
-      "execution_count": 49,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1104,6 +1117,7 @@
         }
       },
       "source": [
+        "#Plot accuracy curve\n",
         "fig=plt.figure()\n",
         "plt.plot(history.history['acc'],'r',linewidth=3.0)\n",
         "plt.plot(history.history['val_acc'],'b',linewidth=3.0)\n",
@@ -1135,16 +1149,16 @@
       "metadata": {
         "id": "vx9W_tXbl74S",
         "colab_type": "code",
+        "outputId": "8c6e46c2-25cb-4389-e566-6e0f74ea820a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "8c6e46c2-25cb-4389-e566-6e0f74ea820a"
+        }
       },
       "source": [
         "model_name"
       ],
-      "execution_count": 50,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1240,16 +1254,16 @@
       "metadata": {
         "id": "u_z5eMImMj57",
         "colab_type": "code",
+        "outputId": "5f0a4c86-8a95-416e-9ee7-b372d0b2523b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "5f0a4c86-8a95-416e-9ee7-b372d0b2523b"
+        }
       },
       "source": [
         "predict_test(lstm_model)"
       ],
-      "execution_count": 54,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1363,16 +1377,16 @@
       "metadata": {
         "id": "yxpBpPCy3Om5",
         "colab_type": "code",
+        "outputId": "6e5b5396-831f-47d9-d2ca-a011c18de9e7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 680
-        },
-        "outputId": "6e5b5396-831f-47d9-d2ca-a011c18de9e7"
+        }
       },
       "source": [
         "!ls"
       ],
-      "execution_count": 55,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1429,6 +1443,7 @@
         "colab": {}
       },
       "source": [
+        "#Load the weights of the model which had the best validation loss\n",
         "model_filename = 'RNN-0.3-200-Trainable-True-bidrect-False_weights.30-0.04.hdf5'"
       ],
       "execution_count": 0,
@@ -1465,16 +1480,18 @@
       "metadata": {
         "id": "TGJNaYw_-DBB",
         "colab_type": "code",
+        "outputId": "603b73f3-f4c9-4d6d-c7a9-57231beb5da9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "603b73f3-f4c9-4d6d-c7a9-57231beb5da9"
+        }
       },
       "source": [
+        "\n",
+        "#Final test accuracy on the best model\n",
         "predict_test(best_model)"
       ],
-      "execution_count": 60,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1506,17 +1523,17 @@
       "metadata": {
         "id": "VCd7vKKU_RMV",
         "colab_type": "code",
+        "outputId": "03443139-e497-4fb6-98e0-8dcf54edda4b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 422
-        },
-        "outputId": "03443139-e497-4fb6-98e0-8dcf54edda4b"
+        }
       },
       "source": [
         "from PIL import Image\n",
         "display(Image.open('rnn_model.png'))"
       ],
-      "execution_count": 64,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
