--- a/HAN.ipynb
+++ b/HAN.ipynb
@@ -41,7 +41,7 @@
       "metadata": {
         "id": "JvS3pf0t6zsk",
         "colab_type": "code",
-        "outputId": "87c74d2e-8cda-48e4-e1ed-0352cd34cd1d",
+        "outputId": "3959baaa-c0ea-47b1-c17b-20187c773098",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -52,7 +52,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 1,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -68,10 +68,10 @@
       "metadata": {
         "id": "e9s7l5uI7QWJ",
         "colab_type": "code",
-        "outputId": "5ab4a02c-523c-43b3-8e30-84c306affeb5",
+        "outputId": "b9524a25-5df2-469b-8781-9ab544be7132",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 864
+          "height": 846
         }
       },
       "source": [
@@ -110,9 +110,10 @@
         "\n",
         "from keras.layers import Embedding\n",
         "\n",
-        "import time"
+        "import time\n",
+        "from keras.models import model_from_json"
       ],
-      "execution_count": 2,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -167,13 +168,6 @@
             "[nltk_data]  Done downloading collection popular\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
         }
       ]
     },
@@ -196,7 +190,7 @@
         "!rm bbc/README.TXT\n",
         "!unzip glove.6B.zip"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,7 +284,7 @@
         "\n",
         "df.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -415,7 +409,7 @@
         "plt.axis('off')\n",
         "plt.show()\n"
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -573,7 +567,7 @@
         "\n",
         "print('after: %s ...' %y_train)"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -606,7 +600,7 @@
         "print(y.value_counts())\n",
         "print(le.inverse_transform([i for i in range(5)]))"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -738,7 +732,7 @@
         "plt.boxplot(max_se,showcaps=True)\n",
         "# We can see in below plot that optimal number of sentences is around 50"
       ],
-      "execution_count": 50,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -778,17 +772,17 @@
       "metadata": {
         "id": "gK-HJQUG77nf",
         "colab_type": "code",
+        "outputId": "7d5d4044-ee37-4f9d-c895-b6a781cc3434",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 407
-        },
-        "outputId": "7d5d4044-ee37-4f9d-c895-b6a781cc3434"
+        }
       },
       "source": [
         "plt.boxplot(max_se_length,showcaps=True)\n",
         "# We can see in below plot that optimal sentence length is around 50"
       ],
-      "execution_count": 51,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -892,7 +886,7 @@
         "word_index = tokenizer.word_index\n",
         "print('No. of %s unique tokens.' % len(word_index))"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -941,7 +935,7 @@
       "source": [
         "test_data.shape"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -986,7 +980,7 @@
         "xval = data[-nb_validation_samples:]\n",
         "yval = labels[-nb_validation_samples:]"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1029,7 +1023,7 @@
         "X_test['text'] = X_test['text'].map(lambda x: [token_stop(i) for i in x]).map(lambda x: [i for sl in x for i in sl])\n",
         "'''"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1083,7 +1077,7 @@
         "  labels_index[name] = i\n",
         "labels_index"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1174,7 +1168,7 @@
         "              metrics=['acc'])\n",
         "han_model.summary()"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1224,7 +1218,7 @@
         "endmillis = int(round(time.time() * 1000))\n",
         "print(\"Time taken: \", endmillis - stmillis)"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1349,11 +1343,11 @@
       "metadata": {
         "id": "h7GxyO5c8VFZ",
         "colab_type": "code",
+        "outputId": "ec895bad-ec85-4be8-cbe6-18d1f186bf4b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 303
-        },
-        "outputId": "ec895bad-ec85-4be8-cbe6-18d1f186bf4b"
+        }
       },
       "source": [
         "#Plot accuracy curve\n",
@@ -1367,7 +1361,7 @@
         "fig.savefig(model_name+'-ACC'+'.png')\n",
         "plt.show()"
       ],
-      "execution_count": 48,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1406,7 +1400,7 @@
         "fig.savefig(model_name+'.png')\n",
         "plt.show()"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1427,16 +1421,16 @@
       "metadata": {
         "id": "LUmI9aHUlCgI",
         "colab_type": "code",
+        "outputId": "3d7a035f-1d80-4714-ab94-1bb3e065f626",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "3d7a035f-1d80-4714-ab94-1bb3e065f626"
+        }
       },
       "source": [
         "model_name"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1494,7 +1488,24 @@
       "source": [
         "#Load the weights of the model which had the best validation loss\n",
         "best_model_weights = 'HAN-0.3-300-Trainable-True_weights.16-0.03.hdf5'\n",
-        "!cp gdrive/My\\ Drive/HAN-0.3-300-Trainable-True_weights.16-0.03.hdf5 ."
+        "!cp gdrive/My\\ Drive/HAN-0.3-300-Trainable-True_weights.16-0.03.hdf5 .\n",
+        "!cp gdrive/My\\ Drive/HAN-0.3-300-Trainable-True.json ."
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vjUnlz9yH0MU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "json_file = open('HAN-0.3-300-Trainable-True.json', 'r')\n",
+        "loaded_model_json = json_file.read()\n",
+        "json_file.close()\n",
+        "best_model = model_from_json(loaded_model_json)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1507,16 +1518,6 @@
         "colab": {}
       },
       "source": [
-        "sentence_input = Input(shape=(MAX_SENT_LENGTH,), dtype='int32')\n",
-        "embedded_sequences = embedding_layer(sentence_input)\n",
-        "lstm_layer = Bidirectional(LSTM(100,dropout=dropout))(embedded_sequences)\n",
-        "sentEncoder = Model(sentence_input, lstm_layer)\n",
-        "\n",
-        "article_input = Input(shape=(MAX_SENTS,MAX_SENT_LENGTH), dtype='int32')\n",
-        "article_encoder = TimeDistributed(sentEncoder)(article_input)\n",
-        "lstm_layer_sent = Bidirectional(LSTM(100,dropout=dropout))(article_encoder)\n",
-        "preds = Dense(len(labels_index), activation='softmax')(lstm_layer_sent)\n",
-        "best_model = Model(article_input, preds)\n",
         "best_model.load_weights(best_model_weights)\n",
         "best_model.compile(loss='categorical_crossentropy',\n",
         "              optimizer='rmsprop',\n",
@@ -1567,7 +1568,7 @@
       "metadata": {
         "id": "u_z5eMImMj57",
         "colab_type": "code",
-        "outputId": "ffa8de98-938c-4088-92dd-1e15cb838412",
+        "outputId": "43625b0b-0bdd-46c7-d348-0e7d55cc22d3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -1577,7 +1578,7 @@
         "#Final test accuracy on the best model\n",
         "predict_test(best_model)"
       ],
-      "execution_count": 36,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
@@ -1626,7 +1627,7 @@
         "!wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip\n",
         "!unzip ngrok-stable-linux-amd64.zip"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1670,7 +1671,7 @@
         "! curl -s http://localhost:4040/api/tunnels | python3 -c \\\n",
         "    \"import sys, json; print(json.load(sys.stdin)['tunnels'][0]['public_url'])\""
       ],
-      "execution_count": 38,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1767,17 +1768,17 @@
       "metadata": {
         "id": "T2Ywl1gy6HHA",
         "colab_type": "code",
+        "outputId": "fa403013-2e2d-483e-8899-bf7cd598c9ce",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 423
-        },
-        "outputId": "fa403013-2e2d-483e-8899-bf7cd598c9ce"
+        }
       },
       "source": [
         "from PIL import Image\n",
         "display(Image.open('han_model.png'))"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
